--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>大德汽車修配廠官網首頁</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/my.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/my.css">
     <style>
         .background-image {
             position: relative;
             text-align: center;
-            background: url('/images/car-reg1.jpeg') no-repeat center center;
+            background: url('images/car-reg1.jpeg') no-repeat center center;
             background-size: cover;
             height: 100vh;
             width: 100%;
@@ -69,14 +69,14 @@
     <div class="background-image">
         <div class="overlay"></div>
         <div class="photo-grid">
-            <img src="/images/car-reg1.jpeg" alt="照片1">
-            <img src="/images/car-reg2.jpeg" alt="照片2">
+            <img src="images/car-reg1.jpeg" alt="照片1">
+            <img src="images/car-reg2.jpeg" alt="照片2">
             <button onclick="location.href='http://192.168.10.66/Car_repair_shop.html'"
                 class="btn centered-button">歡迎光臨</button>
         </div>
     </div>
-    <script src="/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/jquery-3.7.1.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/jquery-3.7.1.min.js"></script>
 </body>
 
 </html>
