--- a/Car_repair_shop.html
+++ b/Car_repair_shop.html
@@ -647,7 +647,7 @@
     // 開啟相關視窗的函數
     function openLoginWindow() {
       window.open(
-        "http://192.168.10.66/car_user_login.html",
+        "car_user_login.html",
         "LoginWindow",
         "width=600,height=600,resizable=yes,scrollbars=yes"
       );
@@ -655,7 +655,7 @@
 
     function openReserveWindow() {
       window.open(
-        "http://192.168.10.66/Car_reserve.html",
+        "Car_reserve.html",
         "ReserveWindow",
         "width=800,height=800,resizable=yes,scrollbars=yes"
       );
@@ -663,7 +663,7 @@
 
     function openCar_user_ReservationsWindow() {
       window.open(
-        "http://192.168.10.66/Car_user_reservations.html",
+        "Car_user_reservations.html",
         "ManageReservationsWindow",
         "width=1200,height=1000,resizable=yes,scrollbars=yes"
       );
@@ -671,7 +671,7 @@
 
     function openAdminDashboardWindow() {
       window.open(
-        "http://192.168.10.66/Car_admin_dashboard.html",
+        "Car_admin_dashboard.html",
         "AdminDashboardWindow",
         "width=1400,height=1000,resizable=yes,scrollbars=yes"
       );
@@ -679,7 +679,7 @@
 
     function openChatWindow() {
       window.open(
-        "http://192.168.10.66/chat.html",
+        "chat.html",
         "ChatWindow",
         "width=800,height=1000,resizable=yes,scrollbars=yes"
       );
@@ -688,7 +688,7 @@
     // 新增開啟預約資料表格視窗的函數
     function openAppointmentsTableWindow() {
       window.open(
-        "http://192.168.10.66/appointments_table.html",
+        "appointments_table.html",
         "AppointmentsTableWindow",
         "width=1600,height=1200,resizable=yes,scrollbars=yes"
       );
@@ -700,7 +700,7 @@
       if (u_id) {
         $.ajax({
           type: "POST",
-          url: "http://192.168.10.66/users_api.php?action=checkuid",
+          url: "users_api.php?action=checkuid",
           data: JSON.stringify({ u_id: u_id }),
           contentType: "application/json",
           dataType: "json",
@@ -732,7 +732,7 @@
       if (u_id && u_id !== "") {
         $.ajax({
           type: "POST",
-          url: "http://192.168.10.66/users_api.php?action=checkuid",
+          url: "users_api.php?action=checkuid",
           data: JSON.stringify({ u_id: u_id }),
           contentType: "application/json",
           dataType: "json",
@@ -773,7 +773,7 @@
         if (value.length > 2 && value.length < 11) {
           $.ajax({
             type: "POST",
-            url: "http://192.168.10.66/users_api.php?action=check_username",
+            url: "users_api.php?action=check_username",
             data: JSON.stringify({ user_name: value }),
             contentType: "application/json",
             dataType: "json",
@@ -880,7 +880,7 @@
         if (user_name.length > 2 && user_name.length < 11) {
           $.ajax({
             type: "POST",
-            url: "http://192.168.10.66/users_api.php?action=check_username",
+            url: "users_api.php?action=check_username",
             data: JSON.stringify({ user_name: user_name }),
             contentType: "application/json",
             dataType: "json",
@@ -919,7 +919,7 @@
           };
           $.ajax({
             type: "POST",
-            url: "http://192.168.10.66/users_api.php?action=register",
+            url: "users_api.php?action=register",
             data: JSON.stringify(JSONdata),
             contentType: "application/json",
             success: function (data) {
@@ -931,7 +931,7 @@
                   title: "註冊成功！請稍後進入首頁",
                   icon: "success",
                 }).then(() => {
-                  location.href = "http://192.168.10.66/Car_repair_shop.html";
+                  location.href = "Car_repair_shop.html";
                 });
               } else {
                 Swal.fire({ title: data.message, icon: "error" });
@@ -1029,7 +1029,7 @@
 
           $.ajax({
             type: "POST",
-            url: "http://192.168.10.66/users_api.php?action=update_profile",
+            url: "users_api.php?action=update_profile",
             data: JSON.stringify(formData),
             contentType: "application/json",
             dataType: "json",
@@ -1069,7 +1069,7 @@
         setCookie("level", "", -1); // 刪除 Cookie
         $("#s02_chat_btn").addClass("d-none"); // 登出時隱藏線上諮詢
         $("#s02_appointments_table_btn").addClass("d-none"); // 登出時隱藏預約資料表格按鈕
-        location.href = "http://192.168.10.66/Car_repair_shop.html";
+        location.href = "Car_repair_shop.html";
       });
     });
   </script>
