--- a/Car_user_reservations.html
+++ b/Car_user_reservations.html
@@ -182,14 +182,14 @@
                 var u_id = getCookie('u_id');
                 if (!u_id) {
                     Swal.fire('錯誤', '請先登入以查看預約！', 'error').then(() => {
-                        window.location.href = "http://192.168.10.66/car_user_login.html";
+                        window.location.href = "car_user_login.html";
                     });
                     return;
                 }
 
                 $.ajax({
                     type: "GET",
-                    url: "http://192.168.10.66/appointments_api.php?action=get_user_reservations",
+                    url: "appointments_api.php?action=get_user_reservations",
                     dataType: "json",
                     xhrFields: { withCredentials: true },
                     success: function (response) {
@@ -290,7 +290,7 @@
                     if (result.isConfirmed) {
                         $.ajax({
                             type: "DELETE",
-                            url: "http://192.168.10.66/appointments_api.php?action=delete_reservation",
+                            url: "appointments_api.php?action=delete_reservation",
                             data: JSON.stringify({ appointments_id: appointmentsId }),
                             contentType: "application/json",
                             dataType: "json",
@@ -348,7 +348,7 @@
 
                 $.ajax({
                     type: "POST",
-                    url: "http://192.168.10.66/appointments_api.php?action=update_reservation",
+                    url: "appointments_api.php?action=update_reservation",
                     data: JSON.stringify(formData),
                     contentType: "application/json",
                     dataType: "json",
