--- a/chat.html
+++ b/chat.html
@@ -239,14 +239,14 @@
             var u_id = getCookie("u_id");
             if (!u_id) {
                 Swal.fire("錯誤", "請先登入以使用線上諮詢！", "error").then(() => {
-                    window.location.href = "http://192.168.10.66/car_user_login.html";
+                    window.location.href = "car_user_login.html";
                 });
                 return;
             }
             if (!user_id) {
                 Swal.fire("錯誤", "無法獲取用戶 ID，請重新登入！", "error").then(
                     () => {
-                        window.location.href = "http://192.168.10.66/car_user_login.html";
+                        window.location.href = "car_user_login.html";
                     }
                 );
                 return;
@@ -254,7 +254,7 @@
 
             $.ajax({
                 type: "POST",
-                url: "http://192.168.10.66/chat_api.php?action=user_get_messages",
+                url: "chat_api.php?action=user_get_messages",
                 data: JSON.stringify({ user_id: user_id }),
                 contentType: "application/json",
                 dataType: "json",
@@ -311,7 +311,7 @@
             if (u_id && u_id !== "") {
                 $.ajax({
                     type: "POST",
-                    url: "http://192.168.10.66/users_api.php?action=checkuid",
+                    url: "users_api.php?action=checkuid",
                     async: false,
                     data: JSON.stringify({ u_id: u_id }),
                     contentType: "application/json",
@@ -347,7 +347,7 @@
 
                 $.ajax({
                     type: "POST",
-                    url: "http://192.168.10.66/chat_api.php?action=send_message",
+                    url: "chat_api.php?action=send_message",
                     data: JSON.stringify({
                         user_id: user_id,
                         message: message,
