--- a/Car_admin_dashboard.html
+++ b/Car_admin_dashboard.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>後台管理</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/css/my.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/my.css" />
     <style>
         body {
-            background-image: url("/images/car.rep.jpg");
+            background-image: url("images/car.rep.jpg");
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
