--- a/chat.html
+++ b/chat.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>線上諮詢</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/css/my.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/my.css" />
     <style>
         body {
-            background-image: url("/images/car.rep.jpg");
+            background-image: url("images/car.rep.jpg");
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -223,8 +223,8 @@
         </form>
     </div>
 
-    <script src="/js/jquery-3.7.1.min.js"></script>
-    <script src="/js/bootstrap.bundle.min.js"></script>
+    <script src="js/jquery-3.7.1.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script>
         var user_id = "";
