--- a/Car_repair_shop.html
+++ b/Car_repair_shop.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device=1.0" />
   <title>汽車維修官網(專題題目)</title>
-  <link rel="stylesheet" href="/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="/css/my.css" />
-  <link rel="stylesheet" href="/css/all.min.css" />
+  <link rel="stylesheet" href="css/bootstrap.min.css" />
+  <link rel="stylesheet" href="css/my.css" />
+  <link rel="stylesheet" href="css/all.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
   <style>
@@ -48,7 +48,7 @@
       <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container-fluid d-flex align-items-center justify-content-between">
           <a class="navbar-brand d-flex align-items-center me-3" href="#">
-            <img src="/images/logo_transparent.png" alt="Logo" style="width: 50px; height: 50px; margin-right: 15px" />
+            <img src="images/logo_transparent.png" alt="Logo" style="width: 50px; height: 50px; margin-right: 15px" />
             <span class="text-warning fs-4">汽車維修官網</span>
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -275,7 +275,7 @@
       <div class="carousel-inner">
         <div class="carousel-item active" style="
               height: 85vh;
-              background-image: url(/images/c1.jpg);
+              background-image: url(images/c1.jpg);
               background-size: cover;
               background-position: center;
             ">
@@ -289,7 +289,7 @@
         </div>
         <div class="carousel-item" style="
               height: 85vh;
-              background-image: url(/images/c2.jpg);
+              background-image: url(images/c2.jpg);
               background-size: cover;
               background-position: center;
             ">
@@ -303,7 +303,7 @@
         </div>
         <div class="carousel-item" style="
               height: 85vh;
-              background-image: url(/images/c3.jpg);
+              background-image: url(images/c3.jpg);
               background-size: cover;
               background-position: center;
             ">
@@ -498,17 +498,17 @@
       <p class="text-center mb-5"></p>
       <div class="row">
         <div class="col-md-4 mb-4 text-center">
-          <img src="/images/Q1.jpg" alt="Partner 1" class="img-fluid wow animate__bounceInLeft" data-wow-duration="1s"
+          <img src="images/Q1.jpg" alt="Partner 1" class="img-fluid wow animate__bounceInLeft" data-wow-duration="1s"
             data-wow-delay="0s" data-wow-iteration="1" style="max-height: 150px; max-width: 150px" />
           <p>合作夥伴1</p>
         </div>
         <div class="col-md-4 mb-4 text-center">
-          <img src="/images/Q3.jpg" alt="Partner 2" class="img-fluid wow animate__bounceInDown" data-wow-duration="1s"
+          <img src="images/Q3.jpg" alt="Partner 2" class="img-fluid wow animate__bounceInDown" data-wow-duration="1s"
             data-wow-delay="0s" data-wow-iteration="1" style="max-height: 150px; max-width: 150px" />
           <p>合作夥伴2</p>
         </div>
         <div class="col-md-4 text-center">
-          <img src="/images/Q2.jpg" alt="Partner 3" class="img-fluid wow animate__bounceInRight" data-wow-duration="1s"
+          <img src="images/Q2.jpg" alt="Partner 3" class="img-fluid wow animate__bounceInRight" data-wow-duration="1s"
             data-wow-delay="0s" data-wow-iteration="1" style="max-height: 150px; max-width: 150px" />
           <p>合作夥伴3</p>
         </div>
@@ -580,12 +580,12 @@
     </div>
   </section>
 
-  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-  <script src="/js/bootstrap.bundle.min.js"></script>
-  <script src="/js/jquery-3.7.1.min.js"></script>
+  <script data-cfasync="false" src="cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+  <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="js/jquery-3.7.1.min.js"></script>
   <script src="https://unpkg.com/counterup2@2.0.2/dist/index.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="/js/wow.min.js"></script>
+  <script src="js/wow.min.js"></script>
 
   <script>
     // 定義表單驗證旗標
