--- a/car_user_login.html
+++ b/car_user_login.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device=1.0">
     <title>會員登入</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/my.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/my.css">
     <style>
         body {
-            background-image: url('/images/car.rep.jpg');
+            background-image: url('images/car.rep.jpg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -47,8 +47,8 @@
         </form>
     </div>
 
-    <script src="/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/jquery-3.7.1.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/jquery-3.7.1.min.js"></script>
     <script>
         $(document).ready(function () {
             $("#loginForm").submit(function (event) {
