--- a/now/index.html
+++ b/now/index.html
@@ -71,7 +71,7 @@
         <div class="photo-grid">
             <img src="/images/car-reg1.jpeg" alt="照片1">
             <img src="/images/car-reg2.jpeg" alt="照片2">
-            <button onclick="location.href='http://192.168.10.66/Car_repair_shop.html'"
+            <button onclick="location.href='https://chihliang.infinityfreeapp.com/Car_repair_shop.html'"
                 class="btn centered-button">歡迎光臨</button>
         </div>
     </div>
