--- a/Car_reserve.html
+++ b/Car_reserve.html
@@ -132,7 +132,7 @@
 
                 $.ajax({
                     type: "POST",
-                    url: "https://chihliang.infinityfreeapp.com/appointments_api.php?action=create_reservation",
+                    url: "http://chihliang.infinityfreeapp.com/appointments_api.php?action=create_reservation",
                     data: JSON.stringify(formData),
                     contentType: "application/json",
                     dataType: "json",
