--- a/now/Car_reserve.html
+++ b/now/Car_reserve.html
@@ -112,7 +112,7 @@
                 var u_id = getCookie('u_id');
                 if (!u_id) {
                     alert("請先登入以提交預約！");
-                    window.location.href = "https://chihliang.infinityfreeapp.com/car_user_login.html";
+                    window.location.href = "http://chihliang.infinityfreeapp.com/car_user_login.html";
                     return;
                 }
 
@@ -132,7 +132,7 @@
 
                 $.ajax({
                     type: "POST",
-                    url: "https://chihliang.infinityfreeapp.com/appointments_api.php?action=create_reservation",
+                    url: "http://chihliang.infinityfreeapp.com/appointments_api.php?action=create_reservation",
                     data: JSON.stringify(formData),
                     contentType: "application/json",
                     dataType: "json",
