--- a/now/Car_repair_shop.html
+++ b/now/Car_repair_shop.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/css/bootstrap.min.css" />
   <link rel="stylesheet" href="/css/my.css" />
   <link rel="stylesheet" href="/css/all.min.css" />
-  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
   <style>
     .s12.text {
@@ -373,7 +373,7 @@
         <!-- 左邊地圖 -->
         <div class="col-md-6 mb-4 mb-md-0">
           <iframe
-            src="http://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3640.9256785619273!2d120.54776857633368!3d24.139248073735324!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34693f72c72a7d93%3A0x8f28567dd7f74b1e!2z5aSn5b635rG96LuK5L-u6YWN5bug!5e0!3m2!1szh-TW!2stw!4v1735871474542!5m2!1szh-TW!2stw"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3640.9256785619273!2d120.54776857633368!3d24.139248073735324!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34693f72c72a7d93%3A0x8f28567dd7f74b1e!2z5aSn5b635rG96LuK5L-u6YWN5bug!5e0!3m2!1szh-TW!2stw!4v1735871474542!5m2!1szh-TW!2stw"
             width="100%" height="450" style="border: 0" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
@@ -583,8 +583,8 @@
   <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
   <script src="/js/bootstrap.bundle.min.js"></script>
   <script src="/js/jquery-3.7.1.min.js"></script>
-  <script src="http://unpkg.com/counterup2@2.0.2/dist/index.js"></script>
-  <script src="http://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://unpkg.com/counterup2@2.0.2/dist/index.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="/js/wow.min.js"></script>
 
   <script>
@@ -647,7 +647,7 @@
     // 開啟相關視窗的函數
     function openLoginWindow() {
       window.open(
-        "http://chihliang.infinityfreeapp.com/car_user_login.html",
+        "https://chihliang.infinityfreeapp.com/car_user_login.html",
         "LoginWindow",
         "width=600,height=600,resizable=yes,scrollbars=yes"
       );
@@ -655,7 +655,7 @@
 
     function openReserveWindow() {
       window.open(
-        "http://chihliang.infinityfreeapp.com/Car_reserve.html",
+        "https://chihliang.infinityfreeapp.com/Car_reserve.html",
         "ReserveWindow",
         "width=800,height=800,resizable=yes,scrollbars=yes"
       );
@@ -663,7 +663,7 @@
 
     function openCar_user_ReservationsWindow() {
       window.open(
-        "http://chihliang.infinityfreeapp.com/Car_user_reservations.html",
+        "https://chihliang.infinityfreeapp.com/Car_user_reservations.html",
         "ManageReservationsWindow",
         "width=1200,height=1000,resizable=yes,scrollbars=yes"
       );
@@ -671,7 +671,7 @@
 
     function openAdminDashboardWindow() {
       window.open(
-        "http://chihliang.infinityfreeapp.com/Car_admin_dashboard.html",
+        "https://chihliang.infinityfreeapp.com/Car_admin_dashboard.html",
         "AdminDashboardWindow",
         "width=1400,height=1000,resizable=yes,scrollbars=yes"
       );
@@ -679,7 +679,7 @@
 
     function openChatWindow() {
       window.open(
-        "http://chihliang.infinityfreeapp.com/chat.html",
+        "https://chihliang.infinityfreeapp.com/chat.html",
         "ChatWindow",
         "width=800,height=1000,resizable=yes,scrollbars=yes"
       );
@@ -688,7 +688,7 @@
     // 新增開啟預約資料表格視窗的函數
     function openAppointmentsTableWindow() {
       window.open(
-        "http://chihliang.infinityfreeapp.com/appointments_table.html",
+        "https://chihliang.infinityfreeapp.com/appointments_table.html",
         "AppointmentsTableWindow",
         "width=1600,height=1200,resizable=yes,scrollbars=yes"
       );
@@ -700,7 +700,7 @@
       if (u_id) {
         $.ajax({
           type: "POST",
-          url: "http://chihliang.infinityfreeapp.com/users_api.php?action=checkuid",
+          url: "https://chihliang.infinityfreeapp.com/users_api.php?action=checkuid",
           data: JSON.stringify({ u_id: u_id }),
           contentType: "application/json",
           dataType: "json",
@@ -732,7 +732,7 @@
       if (u_id && u_id !== "") {
         $.ajax({
           type: "POST",
-          url: "http://chihliang.infinityfreeapp.com/users_api.php?action=checkuid",
+          url: "https://chihliang.infinityfreeapp.com/users_api.php?action=checkuid",
           data: JSON.stringify({ u_id: u_id }),
           contentType: "application/json",
           dataType: "json",
@@ -773,7 +773,7 @@
         if (value.length > 2 && value.length < 11) {
           $.ajax({
             type: "POST",
-            url: "http://chihliang.infinityfreeapp.com/users_api.php?action=check_username",
+            url: "https://chihliang.infinityfreeapp.com/users_api.php?action=check_username",
             data: JSON.stringify({ user_name: value }),
             contentType: "application/json",
             dataType: "json",
@@ -880,7 +880,7 @@
         if (user_name.length > 2 && user_name.length < 11) {
           $.ajax({
             type: "POST",
-            url: "http://chihliang.infinityfreeapp.com/users_api.php?action=check_username",
+            url: "https://chihliang.infinityfreeapp.com/users_api.php?action=check_username",
             data: JSON.stringify({ user_name: user_name }),
             contentType: "application/json",
             dataType: "json",
@@ -919,7 +919,7 @@
           };
           $.ajax({
             type: "POST",
-            url: "http://chihliang.infinityfreeapp.com/users_api.php?action=register",
+            url: "https://chihliang.infinityfreeapp.com/users_api.php?action=register",
             data: JSON.stringify(JSONdata),
             contentType: "application/json",
             success: function (data) {
@@ -931,7 +931,7 @@
                   title: "註冊成功！請稍後進入首頁",
                   icon: "success",
                 }).then(() => {
-                  location.href = "http://chihliang.infinityfreeapp.com/Car_repair_shop.html";
+                  location.href = "https://chihliang.infinityfreeapp.com/Car_repair_shop.html";
                 });
               } else {
                 Swal.fire({ title: data.message, icon: "error" });
@@ -1029,7 +1029,7 @@
 
           $.ajax({
             type: "POST",
-            url: "http://chihliang.infinityfreeapp.com/users_api.php?action=update_profile",
+            url: "https://chihliang.infinityfreeapp.com/users_api.php?action=update_profile",
             data: JSON.stringify(formData),
             contentType: "application/json",
             dataType: "json",
@@ -1069,7 +1069,7 @@
         setCookie("level", "", -1); // 刪除 Cookie
         $("#s02_chat_btn").addClass("d-none"); // 登出時隱藏線上諮詢
         $("#s02_appointments_table_btn").addClass("d-none"); // 登出時隱藏預約資料表格按鈕
-        location.href = "http://chihliang.infinityfreeapp.com/Car_repair_shop.html";
+        location.href = "https://chihliang.infinityfreeapp.com/Car_repair_shop.html";
       });
     });
   </script>
