--- a/now/appointments_table.html
+++ b/now/appointments_table.html
@@ -130,8 +130,8 @@
 
     <script src="/js/jquery-3.7.1.min.js"></script>
     <script src="/js/bootstrap.bundle.min.js"></script>
-    <script src="http://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="http://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
         let allReservations = []; // 儲存所有預約資料
         let priceChart; // 儲存 Chart.js 實例
@@ -297,15 +297,15 @@
 
             if (!u_id) {
                 Swal.fire('錯誤', '請先登入！', 'error').then(() => {
-                    window.location.href = "http://chihliang.infinityfreeapp.com/car_user_login.html";
+                    window.location.href = "https://chihliang.infinityfreeapp.com/car_user_login.html";
                 });
                 return;
             }
 
             if (level == 1) {
-                url = `http://chihliang.infinityfreeapp.com/appointments_api.php?action=get_all_reservations`;
+                url = `https://chihliang.infinityfreeapp.com/appointments_api.php?action=get_all_reservations`;
             } else if (level == 2) {
-                url = `http://chihliang.infinityfreeapp.com/appointments_api.php?action=get_user_reservations`;
+                url = `https://chihliang.infinityfreeapp.com/appointments_api.php?action=get_user_reservations`;
             } else {
                 Swal.fire('錯誤', '您無權查看此資料！', 'error');
                 return;
