--- a/appointments_table.html
+++ b/appointments_table.html
@@ -303,9 +303,9 @@
             }
 
             if (level == 1) {
-                url = `https://chihliang.infinityfreeapp.com/appointments_api.php?action=get_all_reservations`;
+                url = `https://abc.sheep0201.xyz/appointments_api.php?action=get_all_reservations`;
             } else if (level == 2) {
-                url = `https://chihliang.infinityfreeapp.com/appointments_api.php?action=get_user_reservations`;
+                url = `https://abc.sheep0201.xyz/appointments_api.php?action=get_user_reservations`;
             } else {
                 Swal.fire('錯誤', '您無權查看此資料！', 'error');
                 return;
