--- a/car_user_login.html
+++ b/car_user_login.html
@@ -59,7 +59,7 @@
                 };
                 $.ajax({
                     type: "POST",
-                    url: "https://chihliang.infinityfreeapp.com/users_api.php?action=login",
+                    url: "https://abc.sheep0201.xyz/users_api.php?action=login",
                     data: JSON.stringify(userData),
                     contentType: "application/json",
                     success: function (data) {
