--- a/Car_repair_shop.html
+++ b/Car_repair_shop.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>汽車維修官網(專題題目)</title>
   <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/my.css" />
   <link rel="stylesheet" href="css/all.min.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <style>
     .s12.text {
@@ -580,12 +580,8 @@
     </div>
   </section>
 
-<<<<<<< HEAD
-  <script data-cfasync="false" src="cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-=======
-  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
->>>>>>> aac133fb013648bec71c58f3b1a4b234b64c92ca
-  <script src="js/bootstrap.bundle.min.js"></script>
+  <script data-cfasync="false" src="//cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/jquery-3.7.1.min.js"></script>
   <script src="https://unpkg.com/counterup2@2.0.2/dist/index.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
